k8s/admin-deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: admin-service
  template:
    metadata:
      labels:
        component: admin-service
    spec:
      containers:
        - name: admin-service
          image: 796786461592.dkr.ecr.ap-south-1.amazonaws.com/admin:v1.0.970
          ports:
            - containerPort: 3003
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service-service
spec:
  type: ClusterIP
  selector:
    component: admin-service
  ports:
    - port: 3003
      targetPort: 3003
